[gd_scene load_steps=5 format=3 uid="uid://ea82gm64uwm6"]

[ext_resource type="Texture2D" uid="uid://kp65ivjey511" path="res://taylor-van-riper-yQorCngxzwI-unsplash.jpg" id="1_dbpgm"]
[ext_resource type="Script" path="res://TextureRectmainmenu.gd" id="2_haslr"]
[ext_resource type="Script" path="res://mainmenuscript.gd" id="3_mdvre"]
[ext_resource type="FontFile" uid="uid://2itwqqkcfb35" path="res://AustieBostKittenKlub.ttf" id="4_y70ln"]

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 105.0
offset_right = 69.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_mdvre")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
clip_contents = true
layout_mode = 0
offset_left = -9.0
offset_top = -1180.0
offset_right = 3144.0
offset_bottom = 4512.0
scale = Vector2(0.425, 0.425)
texture = ExtResource("1_dbpgm")
expand_mode = 1
stretch_mode = 4
flip_h = true
script = ExtResource("2_haslr")
metadata/_edit_lock_ = true

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = -103.0
offset_right = 1275.0
offset_bottom = 617.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.772549, 0.541176, 0.670588, 1)
theme_override_colors/font_shadow_color = Color(0.133333, 0.556863, 0.658824, 1)
theme_override_fonts/font = ExtResource("4_y70ln")
theme_override_font_sizes/font_size = 102
text = "Animalia 
Observation
Odyssey"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "start"

[node name="settings" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="stop" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "stop
"

[connection signal="pressed" from="Container/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/stop" to="." method="_on_stop_pressed"]
